SERVER-97297 Multi updates with upsert:true can fail due to StaleConfig even with pauseMigrationsDuringMultiUpdates set (#30323)

GitOrigin-RevId: 3e7d2af3bec12f1deaa1a94fb8a3a252242bf841